--- a/src/styles.css
+++ b/src/styles.css
@@ -41,3 +41,11 @@ h1, .h1 {
     padding-top: 20px;
     width: 90%;
 }
+
+.admin-page-content{
+    
+    margin-top: 51px;
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+}
