--- a/src/app/pages/admin/admin-home-page/admin-home-page.component.html
+++ b/src/app/pages/admin/admin-home-page/admin-home-page.component.html
@@ -35,11 +35,28 @@
     /管理中心
   </div>
   <div class="dashboard-group">
-    <span></span>
+    <span>
+      <i class="icon-yingyong3 iconfont icon-2x" style="color:cornflowerblue"></i>
+    </span>
     <div class="dashboard-group-heading">
-      人事管理
+      添加的应用
     </div>
+    <div class="app-list row">
+      <div class="col-md-3 col-xs-12 col-sm-4 app-item">
+        <a href="">
 
+          <span class="app-summary">
+            <span class="app-label">应用名称</span>
+            <br> 应用简介
+          </span>
+          <div class="app-icon">图标</div>
+        </a>
+
+      </div>
+
+    </div>
+    <app-app-group></app-app-group>
 
   </div>
+
 </div>
