动态表单提交

--- a/src/app/pages/admin/admin-home-page/app-group/app-group.component.html
+++ b/src/app/pages/admin/admin-home-page/app-group/app-group.component.html
@@ -13,7 +13,11 @@
           <span class="app-label ">应用名称</span>
           <br> 应用简介
         </span>
-        <div class="app-icon ">图标</div>
+        <div class="app-icon ">
+          <span>
+            <i class="iconfont icon-yichu icon-2x" style="color: coral;"></i>
+          </span>
+        </div>
       </a>
 
     </div>
