--- a/src/app/pages/admin/admin-signin-page/admin-signin-page.component.html
+++ b/src/app/pages/admin/admin-signin-page/admin-signin-page.component.html
@@ -27,7 +27,7 @@
           <label for="password" class="FormLabel_whyo7j">密码</label>
           <input type="password" name="password" value="111" id="os19ml3ak" class="FormInput_1vxy8pn">
         </div>
-        <button type="submit" class="btn btn-primary" routerLink="/admin/home">登陆 </button>
+        <button type="submit" class="btn btn-primary" routerLink="/admin/">登陆 </button>
       </form>
     </div>
   </div>
