--- a/src/app/pages/admin/admin-home-page/admin-home-page.component.html
+++ b/src/app/pages/admin/admin-home-page/admin-home-page.component.html
@@ -1,62 +1,39 @@
-.
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <!-- <a class="navbar-brand" href="#">Title</a> -->
-  <div class="navbar-content">
-    <div class="navbar-left">
-      <ul class="nav navbar-nav">
-
-        <li class="active">
-          <a href="#">首页</a>
-        </li>
-        <li>
-          <a href="#">Link</a>
-        </li>
-      </ul>
-    </div>
-    <div class="navbar-right">
-      <ul class="nav navbar-nav">
-
-        <li class="active">
-          <a href="#">退出</a>
-        </li>
-        <li>
-          <a href="#">Link</a>
-        </li>
-      </ul>
-    </div>
-
-  </div>
-
-</nav>
-
 <!-- dashboard -->
-<div class="admin-page-content">
-  <div class="dashboard">
-    /管理中心
+
+<app-nav></app-nav>
+
+<div class="dashboard-group">
+  <span>
+    <i class="icon-yingyong3 iconfont icon-2x" style="color:cornflowerblue"></i>
+  </span>
+  <div class="dashboard-group-heading">
+    添加的应用
   </div>
-  <div class="dashboard-group">
-    <span>
-      <i class="icon-yingyong3 iconfont icon-2x" style="color:cornflowerblue"></i>
-    </span>
-    <div class="dashboard-group-heading">
-      添加的应用
-    </div>
-    <div class="app-list row">
-      <div class="col-md-3 col-xs-12 col-sm-4 app-item">
-        <a href="">
+  <div class="app-list row">
+    <div class="col-md-3 col-xs-10 col-xs-offset-1 col-sm-4 app-item">
+      <a routerLink="/admin/fruitOrderSystem">
 
-          <span class="app-summary">
-            <span class="app-label">应用名称</span>
-            <br> 应用简介
-          </span>
-          <div class="app-icon">图标</div>
-        </a>
+        <span class="app-summary">
+          <span class="app-label">水果订购系统</span>
+          <br>
+          <span>专为水果订购商人,量身定制的App应用 </span>
+        </span>
 
+      </a>
+      <div class="app-icon circle icon" (click)="removeApp()">
+        <span>
+          <i class="iconfont icon-yichu icon-2x" style="color: coral;"></i>
+        </span>
       </div>
 
     </div>
-    <app-app-group></app-app-group>
 
   </div>
+  <app-app-group></app-app-group>
 
 </div>
+
+
+<!-- <app-transition> -->
+
+<!-- </app-transition> -->
