--- a/src/app/pages/admin/fruit-order-system-page/fruit-order-system-page.component.html
+++ b/src/app/pages/admin/fruit-order-system-page/fruit-order-system-page.component.html
@@ -4,12 +4,17 @@
 
 <div>
   <tabset>
-    <tab heading="我的用户" id="tab1">
+    <tab heading="用户">
       <app-fruit-user-manage></app-fruit-user-manage>
     </tab>
-    <tab heading="商品管理">Static content 1</tab>
-    <tab heading="订单以及数据分析">Static content 2</tab>
+    <tab heading="商品">
+      <app-fruit-product-manage></app-fruit-product-manage>
+    </tab>
 
+    <tab heading="统计">
+      <app-fruit-analysis></app-fruit-analysis>
+    </tab>
+    <tab heading="应用设置"></tab>
 
 
   </tabset>
